--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1082,7 +1082,7 @@ a {
 .cid-sFGzrhlvIh {
   padding-top: 120px;
   padding-bottom: 105px;
-  background-image: url("../../../assets/images/header-2.png");
+  background-image: url("../../../assets/images/header-2.webp");
 }
 .cid-sFGzrhlvIh .icons-media-container {
   display: flex;
@@ -1141,7 +1141,7 @@ a {
 .cid-sFGGxz3b6J {
   padding-top: 4rem;
   padding-bottom: 4rem;
-  background-image: url("../../../assets/images/background5.jpg");
+  background-image: url("../../../assets/images/background5.webp");
 }
 .cid-sFGGxz3b6J .row {
   align-items: center;
@@ -1176,7 +1176,7 @@ a {
 .cid-ty6AavkJy8 {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-image: url("../../../assets/images/undraw-design-feedback-re-8gtk.png");
+  background-image: url("../../../assets/images/undraw-design-feedback-re-8gtk.webp");
 }
 .cid-ty6AavkJy8 .mbr-fallback-image.disabled {
   display: none;
@@ -1234,7 +1234,7 @@ a {
 .cid-sFGBGm1Q33 {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-image: url("../../../assets/images/mbr.png");
+  background-image: url("../../../assets/images/mbr.webp");
 }
 .cid-sFGBGm1Q33 .card-wrapper {
   background-color: #353535;
@@ -1282,7 +1282,7 @@ a {
 .cid-ty6QEL3RU5 {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-image: url("../../../assets/images/background2.jpg");
+  background-image: url("../../../assets/images/background2.webp");
 }
 .cid-ty6QEL3RU5 .mbr-fallback-image.disabled {
   display: none;
@@ -1380,7 +1380,7 @@ a {
 .cid-ty70yGfjiI {
   padding-top: 2rem;
   padding-bottom: 3rem;
-  background-image: url("../../../assets/images/background5.jpg");
+  background-image: url("../../../assets/images/background5.webp");
 }
 .cid-ty70yGfjiI .mbr-fallback-image.disabled {
   display: none;
